work on database seeding

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -6,7 +6,10 @@
       "username": "sequelize",
       "password": "_?aaD045.h",
       "host": "localhost",
-      "dialect": "mysql"
+      "dialect": "mariadb"
     }
+  },
+  "security": {
+    "saltRounds": 5
   }
 }
