remove mariadb dependencies

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -6,7 +6,7 @@
       "username": "sequelize",
       "password": "_?aaD045.h",
       "host": "localhost",
-      "dialect": "mariadb"
+      "dialect": "mysql"
     }
   },
   "security": {
