--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -3,8 +3,8 @@
   "connections": {
     "database": {
       "name": "anon_grading_db",
-      "username": "root",
-      "password": "",
+      "username": "sequelize",
+      "password": "_?aaD045.h",
       "host": "localhost",
       "dialect": "mysql"
     }
